# WireSurge

./: .gitignore  Cargo.toml  README.md  architecture.html  book.toml  deny.toml
.github/workflows/: ci.yml  docs.yml
apps/desktop/: README.md
apps/site/: index.html
apps/web/: index.html  styles.css
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: load_streams.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  scenario.rs
crates/corpus/: Cargo.toml
crates/corpus/src/: lib.rs  permute.rs
crates/dns/: Cargo.toml
crates/dns/benches/: per_query.rs
crates/dns/src/: lib.rs
crates/dns/src/transport/: do53.rs  doh.rs  dot.rs  framed.rs  mod.rs
crates/dns/tests/: doh_transport.rs  dot_transport.rs  proxy_protocol.rs
crates/dns/tests/fixtures/: cert.der  key.der
crates/engine/: Cargo.toml
crates/engine/benches/: load_qps.rs
crates/engine/src/: lib.rs  load.rs
crates/engine/tests/: load_doh.rs  load_inflight.rs  load_progress.rs
crates/http/: Cargo.toml
crates/http/src/: h2.rs  lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: hist.rs  lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs  ppv2.rs  tls.rs
docs/: README.md  SUMMARY.md  architecture.html  current-implementation.md  dependency-policy.md  implementation-plan.md  load-engine-plan.md  load-engine.md  references.md  scenario-model.md  ui-plan.md  workflow-model.md
docs/adr/: 0001-dependency-backed-protocol-runtime.md  0001-ring-crypto-provider.md
docs/architecture/: data-and-connections.md  desktop-and-distribution.md  execution-and-shutdown.md  principles-and-product.md  protocols-plugins-observability.md  system-design.md
examples/agent-prompts/: create-request.md
examples/scenarios/: api-and-dns-capacity.yaml
examples/workflows/: api-and-dns-capacity.yaml  http-local.yaml
