[workspace]
members = [
  "crates/core",
  "crates/metrics",
  "crates/storage",
  "crates/http",
  "crates/dns",
  "crates/corpus",
  "crates/transport",
  "crates/plugins",
  "crates/engine",
  "crates/cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zongqi-wang/WireSurge"
rust-version = "1.94"

[workspace.dependencies]
# default features disabled per docs/dependency-policy.md; enabled features are
# documented inline. The CLI is human-first: color, suggestions ("did you mean"),
# and wrap_help give a good terminal experience. clap auto-detects a non-TTY and
# drops ANSI when output is piped, so the machine-readable --output json path
# stays clean. std/derive/help/usage/error-context are needed to parse
# subcommands and map clap errors into WireSurgeError JSON. env is omitted (no
# flag should read ambient env implicitly).
clap = { version = "=4.6.1", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "color", "suggestions", "wrap_help"] }
futures-util = { version = "=0.3.31", default-features = false, features = ["std", "async-await"] }
hdrhistogram = { version = "=7.5.4", default-features = false }
hickory-proto = { version = "=0.26.1", default-features = false, features = ["std"] }
http-body-util = { version = "=0.1.3", default-features = false }
hyper = { version = "=1.10.1", default-features = false, features = ["client", "http1", "http2"] }
hyper-rustls = { version = "=0.27.9", default-features = false, features = ["http1", "http2", "native-tokio", "ring", "tls12"] }
hyper-util = { version = "=0.1.20", default-features = false, features = ["client", "client-legacy", "http1", "http2", "tokio"] }
memmap2 = { version = "=0.9.8" }
serde = { version = "=1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "=1.0.150", default-features = false, features = ["std"] }
serde_path_to_error = { version = "=0.1.20", default-features = false }
tokio = { version = "=1.52.3", default-features = false, features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "=0.7.18", default-features = false, features = ["rt"] }
url = { version = "=2.5.8", default-features = false, features = ["std"] }
yaml_serde = { version = "=0.10.4", default-features = false }
wiresurge-core = { path = "crates/core", version = "=0.1.0" }
wiresurge-corpus = { path = "crates/corpus", version = "=0.1.0" }
wiresurge-dns = { path = "crates/dns", version = "=0.1.0" }
wiresurge-transport = { path = "crates/transport", version = "=0.1.0" }
wiresurge-engine = { path = "crates/engine", version = "=0.1.0" }
wiresurge-http = { path = "crates/http", version = "=0.1.0" }
wiresurge-metrics = { path = "crates/metrics", version = "=0.1.0" }
wiresurge-plugins = { path = "crates/plugins", version = "=0.1.0" }
wiresurge-storage = { path = "crates/storage", version = "=0.1.0" }
