[workspace]
members = [
  "crates/core",
  "crates/metrics",
  "crates/storage",
  "crates/http",
  "crates/dns",
  "crates/corpus",
  "crates/transport",
  "crates/plugins",
  "crates/engine",
  "crates/cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zongqi-wang/WireSurge"
rust-version = "1.94"

[workspace.dependencies]
# Versions are intentionally unpinned (`*`) so the tree tracks the latest
# compatible release; only feature sets are fixed. The CLI is human-first
# (color, suggestions, wrap_help) and clap drops ANSI on non-TTY so the
# --output json path stays clean. TLS uses rustls with the ring provider.
clap = { version = "*", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "color", "suggestions", "wrap_help"] }
comfy-table = { version = "*", default-features = false }
data-encoding = { version = "*", default-features = false, features = ["std"] }
futures-util = { version = "*", default-features = false, features = ["std", "async-await"] }
hdrhistogram = { version = "*", default-features = false }
hickory-proto = { version = "*", default-features = false, features = ["std"] }
http-body-util = { version = "*", default-features = false }
hyper = { version = "*", default-features = false, features = ["client", "http1", "http2"] }
hyper-rustls = { version = "*", default-features = false, features = ["http1", "http2", "native-tokio", "ring", "tls12"] }
hyper-util = { version = "*", default-features = false, features = ["client", "client-legacy", "http1", "http2", "tokio"] }
indicatif = { version = "*", default-features = false }
memmap2 = { version = "*" }
rustls = { version = "*", default-features = false, features = ["std", "ring", "tls12"] }
rustls-native-certs = { version = "*" }
serde = { version = "*", default-features = false, features = ["derive", "std"] }
serde_json = { version = "*", default-features = false, features = ["std"] }
serde_path_to_error = { version = "*", default-features = false }
tokio = { version = "*", default-features = false, features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "*", default-features = false, features = ["ring", "logging", "tls12"] }
tokio-util = { version = "*", default-features = false, features = ["rt"] }
url = { version = "*", default-features = false, features = ["std"] }
yaml_serde = { version = "*", default-features = false }
wiresurge-core = { path = "crates/core", version = "=0.1.0" }
wiresurge-corpus = { path = "crates/corpus", version = "=0.1.0" }
wiresurge-dns = { path = "crates/dns", version = "=0.1.0" }
wiresurge-transport = { path = "crates/transport", version = "=0.1.0" }
wiresurge-engine = { path = "crates/engine", version = "=0.1.0" }
wiresurge-http = { path = "crates/http", version = "=0.1.0" }
wiresurge-metrics = { path = "crates/metrics", version = "=0.1.0" }
wiresurge-plugins = { path = "crates/plugins", version = "=0.1.0" }
wiresurge-storage = { path = "crates/storage", version = "=0.1.0" }
