[package]
name = "wiresurge-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "wiresurge_cli"
path = "src/lib.rs"

[[bin]]
name = "wiresurge"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
wiresurge-core.workspace = true
wiresurge-dns.workspace = true
wiresurge-engine.workspace = true
wiresurge-plugins.workspace = true
wiresurge-storage.workspace = true
