[package]
name = "wiresurge-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "wiresurge_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
yaml_serde.workspace = true
