[package]
name = "wiresurge-dns"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "wiresurge_dns"
path = "src/lib.rs"

[dependencies]
hickory-proto.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
wiresurge-core.workspace = true
wiresurge-metrics.workspace = true
wiresurge-transport.workspace = true

[dev-dependencies]
futures-util.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
