[package]
name = "wiresurge-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "wiresurge_engine"
path = "src/lib.rs"

[dependencies]
wiresurge-core.workspace = true
wiresurge-http.workspace = true
wiresurge-metrics.workspace = true
wiresurge-storage.workspace = true
