[package]
name = "wiresurge-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "wiresurge_engine"
path = "src/lib.rs"

[dependencies]
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
wiresurge-core.workspace = true
wiresurge-corpus.workspace = true
wiresurge-dns.workspace = true
wiresurge-http.workspace = true
wiresurge-metrics.workspace = true
wiresurge-storage.workspace = true
wiresurge-transport.workspace = true

[dev-dependencies]
data-encoding.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["server"] }
hyper-util.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true

[[bench]]
name = "load_qps"
harness = false
