[package]
name = "wiresurge-metrics"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "wiresurge_metrics"
path = "src/lib.rs"

[dependencies]
hdrhistogram.workspace = true
serde.workspace = true
serde_json.workspace = true
wiresurge-core.workspace = true
