[package]
name = "wiresurge-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "wiresurge_storage"
path = "src/lib.rs"

[dependencies]
serde_json.workspace = true
wiresurge-core.workspace = true
wiresurge-metrics.workspace = true
